Renamed new property and API to reflect that it's really a URL.